--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!-- css -->
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="../styles.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 
@@ -17,33 +17,33 @@
 
 <body>
     <header class="bg-white">
-            <nav class="navbar navbar-expand-sm bg-white pt-4 fixed-top">
-                <div class="container-fluid d-flex justify-content-center gap-5">
-                    <div class="d-flex gap-5">
-                        <a class="navbar-brand vectorex" href="#">Vectorex</a>
-                        <button class="navbar-toggler order-first" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                    </div>
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item nav_item">
-                                <button id="all" class="nav-link btn-nav" aria-current="page" href="#">All</button>
-                            </li>
-                            <li class="nav-item nav_item">
-                                <button id="shirts" class="nav-link btn-nav" href="#">Shirts</button>
-                            </li>
-                            <li class="nav-item nav_item">
-                                <button id="hoodies" class="nav-link btn-nav" href="#">Hoodies</button>
-                            </li>
-                            <li class="nav-item nav_item">
-                                <button id="shorts" class="nav-link btn-nav">Shorts</button>
-                            </li>
-                        </ul>
-                    </div>
-                    <div>
+        <nav class="navbar navbar-expand-sm bg-white pt-4 fixed-top">
+            <div class="container-fluid d-flex justify-content-center gap-5">
+                <div class="d-flex gap-5">
+                    <a class="navbar-brand vectorex" href="#">Vectorex</a>
+                    <button class="navbar-toggler order-first" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item nav_item">
+                            <button id="all" class="nav-link btn-nav" aria-current="page" href="#">All</button>
+                        </li>
+                        <li class="nav-item nav_item">
+                            <button id="shirts" class="nav-link btn-nav" href="#">Shirts</button>
+                        </li>
+                        <li class="nav-item nav_item">
+                            <button id="hoodies" class="nav-link btn-nav" href="#">Hoodies</button>
+                        </li>
+                        <li class="nav-item nav_item">
+                            <button id="shorts" class="nav-link btn-nav">Shorts</button>
+                        </li>
+                    </ul>
+                </div>
+                <div>
                     <a href="./cart.html" class="container-icon-cart">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-cart-fill"
                             viewBox="0 0 16 16">
@@ -54,8 +54,8 @@
                             class="num-cart text-center d-flex align-items-center justify-content-center">0</small>
                     </a>
                 </div>
-                </div>
-            </nav>
+            </div>
+        </nav>
     </header>
     <main class="margin-main">
         <div class="container">
@@ -70,7 +70,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-    <script src="./main.js "></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
