--- a/pages/cart.html
+++ b/pages/cart.html
@@ -10,7 +10,7 @@
     <!-- sweet alert -->
     <link rel="stylesheet" href="sweetalert2.min.css">
     <!-- css -->
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>Document</title>
 </head>
 
@@ -20,8 +20,9 @@
             <div class="container-fluid justify-content-between gap-4">
                 <div class="d-flex gap-5">
                     <a class="navbar-brand vectorex-cart" href="#">Vectorex</a>
-                    <button class="navbar-toggler order-first" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler order-first" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
@@ -61,7 +62,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-    <script src="./cart.js"></script>
+    <script src="../js/cart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
