agregue el icono

--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-sm bg-white pt-4 fixed-top">
             <div class="container-fluid d-flex justify-content-center gap-5">
                 <div class="d-flex gap-5">
-                    <a class="navbar-brand vectorex" href="#">Vectorex</a>
+                    <a class="navbar-brand vectorex" href="#"><img src="../assets/icon.png" class="img-icon" alt="icon"></a>
                     <button class="navbar-toggler order-first" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                         aria-label="Toggle navigation">
