--- a/pages/cart.html
+++ b/pages/cart.html
@@ -17,9 +17,9 @@
 <body>
     <header class="bg-white">
         <nav class="navbar navbar-expand-lg bg-white p-3 fixed-top">
-            <div class="container-fluid justify-content-between gap-4">
+            <div class="container-fluid justify-content-center gap-4">
                 <div class="d-flex gap-5">
-                    <a class="navbar-brand vectorex-cart" href="#">Vectorex</a>
+                    <a class="navbar-brand vectorex-cart" href="#"><img src="../assets/icon.png" class="img-icon" alt="icon"></a>
                     <button class="navbar-toggler order-first" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                         aria-label="Toggle navigation">
